# tap-google-search-console

./: README.md  meltano.yml  output.json  pyproject.toml  sample_config.json  setup.py  tap-google-search-console.sh  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.secrets/: .gitignore  sample_config.json
tap_google_search_console/: client.py  stream.py  streams.py  tap.py
tap_google_search_console/tests/: __init__.py  test_core.py
