[tool.poetry]
name = "tap-google-search-console"
version = "0.0.1"
description = "`tap-google-search-console` is a Singer tap for GoogleSearchConsole, built with the Meltano SDK for Singer Taps."
authors = ["Jules Huisman"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.3"
google-api-python-client = "2.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-google-search-console = 'tap_google_search_console.tap:TapGoogleSearchConsole.cli'
